feat(serve): add support for streamable-http in MCP (#1062)
Signed-off-by: Lukáš Janeček <xjacka@gmail.com>

--- a/docs/integrations/mcp.mdx
+++ b/docs/integrations/mcp.mdx
@@ -41,7 +41,7 @@ Key benefits
 	
 	
 	def main() -> None:
-	    # create a MCP server with custom config, register ReverseTool and OpenMeteoTool to the MCP server and run it
+	    # create an MCP server with custom config, register ReverseTool and OpenMeteoTool to the MCP server and run it
 	    MCPServer(config=MCPServerConfig(transport="sse", settings=MCPSettings(port=8001))).register_many(
 	        [reverse_tool, OpenMeteoTool()]
 	    ).serve()
