--- a/docs/integrations/acp.mdx
+++ b/docs/integrations/acp.mdx
@@ -39,7 +39,7 @@ When to use ACP instead of [BeeAI Platform Integration](./beeai-platform.mdx)?
 	async def main() -> None:
 	    reader = ConsoleReader()
 	
-	    agent = ACPAgent(agent_name="chat", url="http://127.0.0.1:8000", memory=UnconstrainedMemory())
+	    agent = ACPAgent(agent_name="chat", url="http://127.0.0.1:8001", memory=UnconstrainedMemory())
 	    for prompt in reader:
 	        # Run the agent and observe events
 	        response = await agent.run(prompt).on(
@@ -144,12 +144,12 @@ def main() -> None:
         tools=[DuckDuckGoSearchTool(), OpenMeteoTool()],
         memory=UnconstrainedMemory(),
         # specify the agent's name and other metadata
-        name="my_agent",
+        name="chat",
         description="A simple agent",
     )
 
     # Register the agent with the ACP server and run the HTTP server
-    # For the ToolCallingAgent and ReActAgent, we dont need to specify ACPAgent factory method
+    # For the ToolCallingAgent and ReActAgent, we don't need to specify ACPAgent factory method
     # because they are already registered in the ACPServer
     ACPServer(config=ACPServerConfig(port=8001)).register(agent, tags=["example"]).serve()
 
