docs: update MCP integration page (#1045)

--- a/docs/integrations/mcp.mdx
+++ b/docs/integrations/mcp.mdx
@@ -96,7 +96,7 @@ The MCP adapter uses the MCPServerConfig class to configure the MCP server:
 	```py Python
 	class MCPServerConfig(BaseModel):
 	"""Configuration for the MCPServer."""
-	transport: Literal["stdio", "sse"] = "stdio"  # Transport protocol (stdio or server-sent events)
+	transport: Literal["stdio", "sse", "streamable-http"] = "stdio"  # Transport protocol
 	name: str = "MCP Server"                     # Name of the MCP server
 	instructions: str | None = None              # Optional instructions for the server
 	settings: mcp_server.Settings[Any] = Field(default_factory=lambda: mcp_server.Settings())
