refactor!: convert agents to runnables (#1013)
Ref: #938

Co-authored-by: Tomáš Dvořák <toomas2d@gmail.com>
Co-authored-by: Lukáš Janeček <xjacka@gmail.com>

--- a/docs/guides/mcp-slackbot.mdx
+++ b/docs/guides/mcp-slackbot.mdx
@@ -74,7 +74,6 @@ from dotenv import load_dotenv
 from mcp import StdioServerParameters
 from mcp.client.stdio import stdio_client
 
-from beeai_framework.agents import AgentExecutionConfig
 from beeai_framework.agents.tool_calling import ToolCallingAgent
 from beeai_framework.backend import ChatModel, ChatModelParameters
 from beeai_framework.emitter import EventMeta
@@ -152,11 +151,13 @@ async def main() -> None:
 
     # Run agent with the prompt
     response = await agent.run(
-        prompt="Post the current temperature in Prague to the '#bee-playground-xxx' Slack channel.",
-        execution=AgentExecutionConfig(max_retries_per_step=3, total_max_retries=10, max_iterations=20),
+        "Post the current temperature in Prague to the '#bee-playground-xxx' Slack channel.",
+        max_retries_per_step=3,
+        total_max_retries=10,
+        max_iterations=20,
     ).on("*", print_events)
 
-    print("Agent 🤖 : ", response.result.text)
+    print("Agent 🤖 : ", response.last_message.text)
 
 
 if __name__ == "__main__":
