--- a/docs/integrations/a2a.mdx
+++ b/docs/integrations/a2a.mdx
@@ -47,7 +47,7 @@ A2AAgent lets you easily connect with external agents using the A2A protocol.
 	            lambda data, event: (reader.write("Agent 🤖 (debug) : ", data)),
 	        )
 	
-	        reader.write("Agent 🤖 : ", response.result.text)
+	        reader.write("Agent 🤖 : ", response.last_message.text)
 	
 	
 	if __name__ == "__main__":
