--- a/docs/integrations/acp.mdx
+++ b/docs/integrations/acp.mdx
@@ -47,7 +47,7 @@ When to use ACP instead of [BeeAI Platform Integration](./beeai-platform.mdx)?
 	            lambda data, event: (reader.write("Agent 🤖 (debug) : ", data)),
 	        )
 	
-	        reader.write("Agent 🤖 : ", response.result.text)
+	        reader.write("Agent 🤖 : ", response.last_message.text)
 	
 	
 	if __name__ == "__main__":
@@ -166,31 +166,27 @@ if __name__ == "__main__":
 import sys
 import traceback
 from collections.abc import AsyncGenerator
+from typing import Unpack
 
 import acp_sdk.models as acp_models
 import acp_sdk.server.context as acp_context
 import acp_sdk.server.types as acp_types
-from pydantic import BaseModel, InstanceOf
 
 from beeai_framework.adapters.acp import ACPServer
 from beeai_framework.adapters.acp.serve._utils import acp_msgs_to_framework_msgs
 from beeai_framework.adapters.acp.serve.agent import ACPServerAgent
 from beeai_framework.adapters.acp.serve.server import ACPServerMetadata, to_acp_agent_metadata
-from beeai_framework.agents.base import BaseAgent
-from beeai_framework.backend.message import AnyMessage, AssistantMessage
-from beeai_framework.context import Run, RunContext
+from beeai_framework.agents import AgentOptions, AgentOutput, BaseAgent
+from beeai_framework.backend.message import AnyMessage, AssistantMessage, UserMessage
 from beeai_framework.emitter.emitter import Emitter
 from beeai_framework.errors import FrameworkError
 from beeai_framework.memory import UnconstrainedMemory
 from beeai_framework.memory.base_memory import BaseMemory
-
-
-class EchoAgentRunOutput(BaseModel):
-    message: InstanceOf[AnyMessage]
+from beeai_framework.runnable import runnable_entry
 
 
 # This is a simple echo agent that echoes back the last message it received.
-class EchoAgent(BaseAgent[EchoAgentRunOutput]):
+class EchoAgent(BaseAgent):
     memory: BaseMemory
 
     def __init__(self, memory: BaseMemory) -> None:
@@ -203,17 +199,17 @@ class EchoAgent(BaseAgent[EchoAgentRunOutput]):
             creator=self,
         )
 
-    def run(
-        self,
-        input: list[AnyMessage] | None = None,
-    ) -> Run[EchoAgentRunOutput]:
-        async def handler(context: RunContext) -> EchoAgentRunOutput:
-            assert self.memory is not None
-            if input:
-                await self.memory.add_many(input)
-            return EchoAgentRunOutput(message=AssistantMessage(self.memory.messages[-1].text))
+    @runnable_entry
+    async def run(self, input: str | list[AnyMessage], /, **kwargs: Unpack[AgentOptions]) -> AgentOutput:
+        assert self.memory is not None
 
-        return self._to_run(handler, signal=None)
+        if isinstance(input, str):
+            await self.memory.add(UserMessage(input))
+        elif isinstance(input, list):
+            await self.memory.add_many(input)
+
+        text_input = self.memory.messages[-1].text if self.memory.messages else ""
+        return AgentOutput(output=[AssistantMessage(text_input)])
 
 
 def main() -> None:
@@ -228,7 +224,7 @@ def main() -> None:
         ) -> AsyncGenerator[acp_types.RunYield, acp_types.RunYieldResume]:
             framework_messages = acp_msgs_to_framework_msgs(input)
             response = await agent.run(framework_messages)
-            yield acp_models.MessagePart(content=response.message.text, role="assistant")  # type: ignore[call-arg]
+            yield acp_models.MessagePart(content=response.last_message.text, role="assistant")  # type: ignore[call-arg]
 
         # Create an ACPAgent instance with the run function
         return ACPServerAgent(
