--- a/docs/integrations/beeai-platform.mdx
+++ b/docs/integrations/beeai-platform.mdx
@@ -65,7 +65,7 @@ Here's a simple example that uses the built-in `chat` agent:
 	            lambda data, event: (reader.write("Agent 🤖 (debug) : ", data)),
 	        )
 	
-	        reader.write("Agent 🤖 : ", response.result.text)
+	        reader.write("Agent 🤖 : ", response.last_message.text)
 	
 	
 	if __name__ == "__main__":
@@ -127,7 +127,7 @@ async def main() -> None:
             "update",
             lambda data, _: (reader.write("Agent 🤖 (debug) : ", data)),
         )
-        state.research = response.result.text
+        state.research = response.last_message.text
 
     async def podcast(state: State) -> None:
         # Run the agent and observe events
@@ -139,7 +139,7 @@ async def main() -> None:
             "update",
             lambda data, _: (reader.write("Agent 🤖 (debug) : ", data)),
         )
-        state.output = response.result.text
+        state.output = response.last_message.text
 
     # Define the structure of the workflow graph
     workflow = Workflow(State)
