--- a/docs/integrations/watsonx-orchestrate.mdx
+++ b/docs/integrations/watsonx-orchestrate.mdx
@@ -58,7 +58,7 @@ The `WatsonxOrchestrateAgent` class enables you to connect to any native agent h
 	    )
 	    for prompt in reader:
 	        response = await agent.run(prompt)
-	        reader.write("Agent 🤖 : ", response.result.text)
+	        reader.write("Agent 🤖 : ", response.last_message.text)
 	
 	
 	if __name__ == "__main__":
