--- a/docs/modules/agents.mdx
+++ b/docs/modules/agents.mdx
@@ -74,7 +74,6 @@ from typing import Any
 
 from dotenv import load_dotenv
 
-from beeai_framework.agents import AgentExecutionConfig
 from beeai_framework.agents.react import ReActAgent
 from beeai_framework.backend import ChatModel, ChatModelParameters
 from beeai_framework.emitter import EmitterOptions, EventMeta
@@ -171,11 +170,13 @@ async def main() -> None:
     for prompt in reader:
         # Run agent with the prompt
         response = await agent.run(
-            prompt=prompt,
-            execution=AgentExecutionConfig(max_retries_per_step=3, total_max_retries=10, max_iterations=20),
+            prompt,
+            max_retries_per_step=3,
+            total_max_retries=10,
+            max_iterations=20,
         ).on("*", process_agent_events, EmitterOptions(match_nested=False))
 
-        reader.write("Agent 🤖 : ", response.result.text)
+        reader.write("Agent 🤖 : ", response.last_message.text)
 
 
 if __name__ == "__main__":
@@ -374,11 +375,12 @@ async def main() -> None:
     # Main interaction loop with user input
     for prompt in reader:
         response = await agent.run(prompt).on("*", process_agent_events)
-        reader.write("Agent 🤖 : ", response.result.text)
+        reader.write("Agent 🤖 : ", response.last_message.text)
 
     print("======DONE (showing the full message history)=======")
 
-    for msg in response.memory.messages:
+    messages = response.state.memory.messages
+    for msg in messages:
         print(msg)
 
 
@@ -482,16 +484,18 @@ For advanced use cases, you can create your own agent implementation by extendin
 import asyncio
 import sys
 import traceback
+from typing import Unpack
 
-from pydantic import BaseModel, Field, InstanceOf
+from pydantic import BaseModel, Field
 
 from beeai_framework.adapters.ollama import OllamaChatModel
-from beeai_framework.agents import AgentMeta, BaseAgent, BaseAgentRunOptions
+from beeai_framework.agents import AgentMeta, AgentOptions, AgentOutput, BaseAgent
 from beeai_framework.backend import AnyMessage, AssistantMessage, ChatModel, SystemMessage, UserMessage
-from beeai_framework.context import Run, RunContext
+from beeai_framework.context import RunContext
 from beeai_framework.emitter import Emitter
 from beeai_framework.errors import FrameworkError
 from beeai_framework.memory import BaseMemory, UnconstrainedMemory
+from beeai_framework.runnable import runnable_entry
 
 
 class State(BaseModel):
@@ -499,20 +503,7 @@ class State(BaseModel):
     final_answer: str
 
 
-class RunInput(BaseModel):
-    message: InstanceOf[AnyMessage]
-
-
-class CustomAgentRunOptions(BaseAgentRunOptions):
-    max_retries: int | None = None
-
-
-class CustomAgentRunOutput(BaseModel):
-    message: InstanceOf[AnyMessage]
-    state: State
-
-
-class CustomAgent(BaseAgent[CustomAgentRunOutput]):
+class CustomAgent(BaseAgent):
     def __init__(self, llm: ChatModel, memory: BaseMemory) -> None:
         super().__init__()
         self.model = llm
@@ -532,12 +523,9 @@ class CustomAgent(BaseAgent[CustomAgentRunOutput]):
             creator=self,
         )
 
-    def run(
-        self,
-        run_input: RunInput,
-        options: CustomAgentRunOptions | None = None,
-    ) -> Run[CustomAgentRunOutput]:
-        async def handler(context: RunContext) -> CustomAgentRunOutput:
+    @runnable_entry
+    async def run(self, input: str | list[AnyMessage], /, **kwargs: Unpack[AgentOptions]) -> AgentOutput:
+        async def handler(context: RunContext) -> AgentOutput:
             class CustomSchema(BaseModel):
                 thought: str = Field(description="Describe your thought process before coming with a final answer")
                 final_answer: str = Field(
@@ -549,23 +537,23 @@ class CustomAgent(BaseAgent[CustomAgentRunOutput]):
                 messages=[
                     SystemMessage("You are a helpful assistant. Always use JSON format for your responses."),
                     *(self.memory.messages if self.memory is not None else []),
-                    run_input.message,
+                    *([UserMessage(input)] if isinstance(input, str) else input),
                 ],
-                max_retries=options.max_retries if options else None,
+                max_retries=kwargs.get("total_max_retries", 3),
                 abort_signal=context.signal,
             )
 
             result = AssistantMessage(response.object["final_answer"])
             await self.memory.add(result) if self.memory else None
 
-            return CustomAgentRunOutput(
-                message=result,
-                state=State(thought=response.object["thought"], final_answer=response.object["final_answer"]),
+            return AgentOutput(
+                output=[result],
+                context={
+                    "state": State(thought=response.object["thought"], final_answer=response.object["final_answer"])
+                },
             )
 
-        return self._to_run(
-            handler, signal=options.signal if options else None, run_params={"input": run_input, "options": options}
-        )
+        return await handler(RunContext.get())
 
     @property
     def meta(self) -> AgentMeta:
@@ -582,8 +570,8 @@ async def main() -> None:
         memory=UnconstrainedMemory(),
     )
 
-    response = await agent.run(RunInput(message=UserMessage("Why is the sky blue?")))
-    print(response.state)
+    response = await agent.run([UserMessage("Why is the sky blue?")])
+    print(response.context.get("state"))
 
 
 if __name__ == "__main__":
@@ -885,7 +873,6 @@ import asyncio
 import sys
 import traceback
 
-from beeai_framework.agents import AgentExecutionConfig
 from beeai_framework.agents.react import ReActAgent
 from beeai_framework.backend import AssistantMessage, ChatModel, UserMessage
 from beeai_framework.errors import FrameworkError
@@ -917,13 +904,15 @@ async def main() -> None:
     agent = create_agent()
 
     response = await agent.run(
-        prompt=user_input,
-        execution=AgentExecutionConfig(max_retries_per_step=3, total_max_retries=10, max_iterations=20),
+        user_input,
+        max_retries_per_step=3,
+        total_max_retries=10,
+        max_iterations=20,
     )
     print(f"Received response: {response}")
 
     # Create and store assistant's response
-    assistant_message = AssistantMessage(response.result.text)
+    assistant_message = AssistantMessage(response.last_message.text)
 
     # Await adding assistant message to memory
     await memory.add(assistant_message)
@@ -949,6 +938,7 @@ if __name__ == "__main__":
     except FrameworkError as e:
         traceback.print_exc()
         sys.exit(e.explain())
+
 ```
 
 {/* <!-- embedme typescript/examples/memory/agentMemory.ts --> */}
