--- a/docs/modules/logger.mdx
+++ b/docs/modules/logger.mdx
@@ -133,7 +133,7 @@ import asyncio
 import sys
 import traceback
 
-from beeai_framework.agents.react import ReActAgent, ReActAgentRunOutput
+from beeai_framework.agents.react import ReActAgent
 from beeai_framework.backend import ChatModel
 from beeai_framework.errors import FrameworkError
 from beeai_framework.logger import Logger
@@ -145,13 +145,13 @@ async def main() -> None:
 
     agent = ReActAgent(llm=ChatModel.from_name("ollama:granite3.3:8b"), tools=[], memory=UnconstrainedMemory())
 
-    output: ReActAgentRunOutput = await agent.run("Hello!").observe(
+    output = await agent.run("Hello!").observe(
         lambda emitter: emitter.on(
             "update", lambda data, event: logger.info(f"Event {event.path} triggered by {type(event.creator).__name__}")
         )
     )
 
-    logger.info(f"Agent 🤖 : {output.result.text}")
+    logger.info(f"Agent 🤖 : {output.last_message.text}")
 
 
 if __name__ == "__main__":
