--- a/docs/modules/memory.mdx
+++ b/docs/modules/memory.mdx
@@ -200,7 +200,6 @@ import asyncio
 import sys
 import traceback
 
-from beeai_framework.agents import AgentExecutionConfig
 from beeai_framework.agents.react import ReActAgent
 from beeai_framework.backend import AssistantMessage, ChatModel, UserMessage
 from beeai_framework.errors import FrameworkError
@@ -232,13 +231,15 @@ async def main() -> None:
     agent = create_agent()
 
     response = await agent.run(
-        prompt=user_input,
-        execution=AgentExecutionConfig(max_retries_per_step=3, total_max_retries=10, max_iterations=20),
+        user_input,
+        max_retries_per_step=3,
+        total_max_retries=10,
+        max_iterations=20,
     )
     print(f"Received response: {response}")
 
     # Create and store assistant's response
-    assistant_message = AssistantMessage(response.result.text)
+    assistant_message = AssistantMessage(response.last_message.text)
 
     # Await adding assistant message to memory
     await memory.add(assistant_message)
