--- a/docs/introduction/quickstart.mdx
+++ b/docs/introduction/quickstart.mdx
@@ -105,7 +105,7 @@ icon: "rocket"
   
       try:
           response = await main_agent.run(question, expected_output="Helpful and clear response.")
-          print("Agent:", response.answer.text)
+          print("Agent:", response.last_message.text)
       except FrameworkError as err:
           print("Error:", err.explain())
   
