feat(adapters): add support for running the A2A server on multiple protocols (#1077)
Ref: #1053

Signed-off-by: Lukáš Janeček <xjacka@gmail.com>

--- a/docs/modules/serve.mdx
+++ b/docs/modules/serve.mdx
@@ -51,7 +51,9 @@ def main() -> None:
     # For the ToolCallingAgent, we don't need to specify ACPAgent factory method
     # because it is already registered in the A2AServer
     # we use LRU memory manager to keep limited amount of sessions in the memory
-    A2AServer(config=A2AServerConfig(port=9999), memory_manager=LRUMemoryManager(maxsize=100)).register(agent).serve()
+    A2AServer(
+        config=A2AServerConfig(port=9999, protocol="jsonrpc"), memory_manager=LRUMemoryManager(maxsize=100)
+    ).register(agent).serve()
 
 
 if __name__ == "__main__":
