--- a/docs/modules/emitter.mdx
+++ b/docs/modules/emitter.mdx
@@ -38,19 +38,15 @@ async def main() -> None:
     # Get the root emitter or create your own
     root = Emitter.root()
 
-    # Define a listener that prints an incoming event
-    # handler can be async or sync function
-    async def on_new_event(data: Any, event: EventMeta) -> None:
+    # Listen to all events that will get emitted
+    @root.on("*.*")
+    async def handle_new_event(data: Any, event: EventMeta) -> None:
         print(f"Received event '{event.name}' ({event.path}) with data {json.dumps(data)}")
-
-    # Setup a listener for all events on the root emitter
-    # *.* -> match all events including those emitted in sub-emitters
-    cleanup = root.match("*.*", on_new_event)
 
     await root.emit("start", {"id": 123})
     await root.emit("end", {"id": 123})
 
-    cleanup()
+    root.off(callback=handle_new_event)  # deregister a listener
 
 
 if __name__ == "__main__":
@@ -114,18 +110,18 @@ async def main() -> None:
     emitter.on("update", lambda data, event: print(data, ": on update"))
 
     # Match all events emitted directly on the instance (not nested)
-    emitter.match("*", lambda data, event: print(data, ": match all instance"))
+    emitter.on("*", lambda data, event: print(data, ": match all instance"))
 
     # Match all events (included nested)
-    cleanup = Emitter.root().match("*.*", lambda data, event: print(data, ": match all nested"))
+    cleanup = Emitter.root().on("*.*", lambda data, event: print(data, ": match all nested"))
 
     # Match events by providing a filter function
-    model.emitter.match(
+    model.emitter.on(
         lambda event: isinstance(event.creator, ChatModel), lambda data, event: print(data, ": match ChatModel")
     )
 
     # Match events by regex
-    emitter.match(re.compile(r"watsonx"), lambda data, event: print(data, ": match regex"))
+    emitter.on(re.compile(r"watsonx"), lambda data, event: print(data, ": match regex"))
 
     await emitter.emit("update", "update")
     await Emitter.root().emit("root", "root")
@@ -199,7 +195,7 @@ from beeai_framework.errors import FrameworkError
 async def main() -> None:
     first: Emitter = Emitter(namespace=["app"])
 
-    first.match(
+    first.on(
         "*.*",
         lambda data, event: print(
             f"'first' has retrieved the following event '{event.path}', isDirect: {event.source == first}"
@@ -208,7 +204,7 @@ async def main() -> None:
 
     second: Emitter = Emitter(namespace=["app", "llm"])
 
-    second.match(
+    second.on(
         "*.*",
         lambda data, event: print(
             f"'second' has retrieved the following event '{event.path}', isDirect: {event.source == second}"
@@ -315,11 +311,11 @@ async def main() -> None:
     )
 
     # Matching events on the instance level
-    agent.emitter.match("*.*", lambda data, event: None)
+    agent.emitter.on("*.*", lambda data, event: None)
 
     # Matching events on the execution (run) level
     await agent.run("Hello agent!").observe(
-        lambda emitter: emitter.match("*.*", lambda data, event: print(f"RUN LOG: received event '{event.path}'"))
+        lambda emitter: emitter.on("*.*", lambda data, event: print(f"RUN LOG: received event '{event.path}'"))
     )
 
 
@@ -384,31 +380,41 @@ Advanced techniques include:
 import asyncio
 import sys
 import traceback
+from typing import Any
 
-from beeai_framework.emitter import Emitter
+from beeai_framework.emitter import Emitter, EventMeta
 from beeai_framework.errors import FrameworkError
 
 
 async def main() -> None:
-    # Create emitter with a type support
+    # Create an emitter
     emitter = Emitter.root().child(
         namespace=["bee", "demo"],
         creator={},  # typically a class
         context={},  # custom data (propagates to the event's context property)
         group_id=None,  # optional id for grouping common events (propagates to the event's groupId property)
-        trace=None,  # data to identify what emitted what and in which context (internally used by framework components)
     )
 
-    # Listen for "start" event
-    emitter.on("start", lambda data, event: print(f"Received '{event.name}' event with id '{data['id']}'"))
+    @emitter.on()
+    async def on_start(data: dict[str, Any], event: EventMeta) -> None:
+        print(f"Received '{event.name}' event with id '{data['id']}'")
 
     # Listen for "update" event
-    emitter.on(
+    cleanup = emitter.on(
         "update", lambda data, event: print(f"Received '{event.name}' with id '{data['id']}' and data '{data['data']}'")
     )
+    cleanup()  # deregister a listener
+
+    # Listen for "success" event
+    @emitter.on("success")
+    async def custom_name(data: dict[str, Any], event: EventMeta) -> None:
+        print(f"Received '{event.name}' event with the following data", data)
 
     await emitter.emit("start", {"id": 123})
     await emitter.emit("update", {"id": 123, "data": "Hello Bee!"})
+    await emitter.emit("success", {"id": 123, "result": "Hello world!"})
+
+    emitter.off("success", custom_name)  # deregister a listener
 
 
 if __name__ == "__main__":
