docs: Fix Links to A2A Protocol Documentation (#1088)
Signed-off-by: Holt Skinner <holtskinner@google.com>
Signed-off-by: Holt Skinner <13262395+holtskinner@users.noreply.github.com>

--- a/docs/integrations/a2a.mdx
+++ b/docs/integrations/a2a.mdx
@@ -3,7 +3,7 @@ title: "A2A"
 icon: "server"
 ---
 
-The **Agent2Agent (A2A) Protocol** is the open standard for AI agent communication. Developed under the Linux Foundation, A2A makes it possible for agents to work together seamlessly across platforms, frameworks, and ecosystems.
+The **[Agent2Agent (A2A) Protocol](https://a2a-protocol.org/)** is the open standard for AI agent communication. Developed under the Linux Foundation, A2A makes it possible for agents to work together seamlessly across platforms, frameworks, and ecosystems.
 
 <Note>
 	Supported in Python only.
@@ -19,7 +19,7 @@ The **Agent2Agent (A2A) Protocol** is the open standard for AI agent communicati
 
 ### A2A Agent (Client)
 
-A2AAgent lets you easily connect with external agents using the A2A protocol.
+`A2AAgent` lets you easily connect with external agents using the A2A protocol.
 
 
 <CodeGroup>
@@ -67,7 +67,7 @@ A2AAgent lets you easily connect with external agents using the A2A protocol.
 
 ### A2A Server
 
-A2AServer lets you expose agents built in the BeeAI framework via A2A protocol.
+`A2AServer` lets you expose agents built in the BeeAI framework via A2A protocol.
 
 <Note>
 	A2A supports only one agent per server.
