--- a/docs/modules/serve.mdx
+++ b/docs/modules/serve.mdx
@@ -18,7 +18,7 @@ The following table lists the currently supported providers:
 
 | Name                                                  | Dependency                                   | Location                    |
 |:-----------------------------------------------------|:--------------------------------------------|:---------------------------|
-| [A2A](https://a2aprotocol.ai/)       | `beeai_framework.adapters.a2a.serve`         | `beeai-platform[a2a]`       |
+| [A2A](https://a2a-protocol.org/)       | `beeai_framework.adapters.a2a.serve`         | `beeai-platform[a2a]`       |
 | [BeeAI Platform](https://beeai.dev/)                | `beeai_framework.adapters.beeai_platform.serve` | `beeai-platform[beeai-platform]` |
 | [MCP](https://modelcontextprotocol.io/) | `beeai_framework.adapters.mcp.serve`         | `beeai-platform[mcp]`       |
 
