Updated welcome page docs to align with current framework strategy and new website copy (#1090)
Signed-off-by: Sandi Besen <sandibesen@gmail.com>

--- a/docs/introduction/welcome.mdx
+++ b/docs/introduction/welcome.mdx
@@ -1,23 +1,30 @@
 ---
-title: "Welcome"
+title: "Welcome to the BeeAI Framework"
 sidebarTitle: "Welcome"
-description: "Build production-ready multi-agent systems in Python or TypeScript"
+description: "Build reliable and production-ready multi-agent systems with our lightweight framework in Python or TypeScript"
 icon: "door-open"
 ---
 
-**BeeAI Framework** is an open-source framework for building production-grade multi-agent systems. It is hosted by the Linux Foundation under open governance, ensuring transparency, community-driven development, and enterprise-grade stability. BeeAI Framework provides the flexibility and performance needed for scalable AI systems, supporting both **Python** and **TypeScript** with complete feature parity.
+**BeeAI Framework** is an open-source framework for building production-grade multi-agent systems. It is hosted by the Linux Foundation under open governance, ensuring transparency, community-driven development, and enterprise-grade stability. 
+
+BeeAI goes beyond simple prompting by providing a lightweight yet powerful approach to reliable agent development, with **built-in constraint enforcement** and rule-based governance that preserves reasoning abilities while ensuring **predictable behavior**.
+The BeeAI Framework provides the flexibility and performance needed for scalable AI systems, supporting both **Python** and **TypeScript** with complete feature parity.
+
 
 ## Key Features
 
 | **Feature**               | **Description**                              |
 | :------------------------ | :---------------------------------------------- |
-| **Dual Language Support** | Complete feature parity between Python and TypeScript implementations |
-| **Workflow Composition**  | Complex multi-agent workflow management with state handling |
-| **Provider Agnostic**     | Supports 10+ LLM providers including Ollama, Groq, OpenAI, Watsonx.ai, and more |
-| **Advanced Memory Support** | Four memory strategies optimized for different use cases, with support for custom memory |
-| **Seamless Integration**  | Support for integrating with LangChain tools, using the MCP, and custom tool development |
-| **Production Optimization** | Built-in caching, memory optimization, and resource management |
-| **Full Observability**      | Real-time monitoring, OpenTelemetry integration, and detailed tracing |
+| **Production Optimization**  | Built-in caching, memory optimization, and resource management for scalable deployment |
+| **Agents with Constraints**  | Preserve your agent's reasoning abilities while enforcing deterministic rules instead of suggesting behavior |
+| **Dynamic Workflows**     | Use simple decorators to design multi-agent systems with advanced patterns like parallelism, retries, and replanning |
+| **Declarative Orchestration**     | Define complex agent systems in YAML for more predictable and maintainable orchestration |
+| **Pluggable Observability** | Integrate with your existing stack in minutes with native OpenTelemetry support for real-time monitoring, auditing, and detailed tracing |
+| **MCP and A2A Native**      | Build MCP-compatible components, equip agents with MCP tools, and interoperate with any MCP or A2A agent system |
+| **Provider Agnostic**      | Supports 10+ LLM providers including Ollama, Groq, OpenAI, Watsonx.ai, and more with seamless switching |
+| **Python and TypeScript Support** | Complete feature parity between Python and TypeScript implementations lets teams build with the tools they already know and love |
+
+
 
 ---
 
