feat(adapters): support BeeAIPlatform adapter and llm extension (#1098)
Signed-off-by: Lukáš Janeček <xjacka@gmail.com>

--- a/docs/integrations/beeai-platform.mdx
+++ b/docs/integrations/beeai-platform.mdx
@@ -180,9 +180,9 @@ The `BeeAIPlatformServer` class exposes agents built with the BeeAI Framework as
 	{/* <!-- embedme python/examples/serve/beeai_platform.py --> */}
 
 	```py Python
+	from beeai_framework.adapters.beeai_platform.backend.chat import BeeAIPlatformChatModel
 	from beeai_framework.adapters.beeai_platform.serve.server import BeeAIPlatformServer
 	from beeai_framework.agents.experimental import RequirementAgent
-	from beeai_framework.backend import ChatModel
 	from beeai_framework.memory import UnconstrainedMemory
 	from beeai_framework.middleware.trajectory import GlobalTrajectoryMiddleware
 	from beeai_framework.tools.search.duckduckgo import DuckDuckGoSearchTool
@@ -197,9 +197,8 @@ The `BeeAIPlatformServer` class exposes agents built with the BeeAI Framework as
 	
 	
 	def main() -> None:
-	    llm = ChatModel.from_name("ollama:granite3.3:8b")
 	    agent = RequirementAgent(
-	        llm=llm,
+	        llm=BeeAIPlatformChatModel(preferred_models=["ollama/granite3.3:8b", "openai/gpt-5"]),
 	        tools=[DuckDuckGoSearchTool(), OpenMeteoTool()],
 	        memory=UnconstrainedMemory(),
 	        middlewares=[GlobalTrajectoryMiddleware()],
