docs: Update tour.mdx (#1116)
Signed-off-by: Jenna Winkler <135358348+jenna-winkler@users.noreply.github.com>

--- a/docs/introduction/tour.mdx
+++ b/docs/introduction/tour.mdx
@@ -1,6 +1,6 @@
 ---
 title: "The Grand Tour"
-description: "A guided journey through BeeAI Framework’s modular architecture"
+description: "Take a guided tour through the BeeAI Framework, building agents from the basics to advanced capabilities"
 icon: "route"
 ---
 
@@ -15,7 +15,7 @@ Here’s a quick map of the stages and modules:
     Your first chat agent using Agent, Backend, and Tool modules
   </Card>
 
-  <Card title="Observability" icon="eyes" href="#observability">
+  <Card title="Debugging" icon="eyes" href="#debugging">
     Add logging and monitoring to debug your agent's behavior
   </Card>
   
