docs: Update tour.mdx (#1117)
Signed-off-by: Jenna Winkler <135358348+jenna-winkler@users.noreply.github.com>

--- a/docs/introduction/tour.mdx
+++ b/docs/introduction/tour.mdx
@@ -4,7 +4,7 @@ description: "Take a guided tour through the BeeAI Framework, building agents fr
 icon: "route"
 ---
 
-This guide takes you step by step, starting with your first agent and leading up to a production-ready system. Each section adds a single new capability, so you can see how everything fits together. Follow the full path, or skip ahead to the parts most useful to you.
+This step-by-step guide shows how to start with your first agent and progressively add tools, debugging, reasoning, knowledge, and more. Each section introduces a single capability, so you can follow the full path or jump to the parts most useful to you.
 
 ## Journey Overview
 
