chore: update beeai-sdk to 0.3.4 (#1119)
Signed-off-by: Lukáš Janeček <xjacka@gmail.com>

--- a/docs/integrations/beeai-platform.mdx
+++ b/docs/integrations/beeai-platform.mdx
@@ -181,7 +181,7 @@ The `BeeAIPlatformServer` class exposes agents built with the BeeAI Framework as
 
 	```py Python
 	from beeai_framework.adapters.beeai_platform.backend.chat import BeeAIPlatformChatModel
-	from beeai_framework.adapters.beeai_platform.serve.server import BeeAIPlatformServer
+	from beeai_framework.adapters.beeai_platform.serve.server import BeeAIPlatformMemoryManager, BeeAIPlatformServer
 	from beeai_framework.agents.experimental import RequirementAgent
 	from beeai_framework.memory import UnconstrainedMemory
 	from beeai_framework.middleware.trajectory import GlobalTrajectoryMiddleware
@@ -205,7 +205,7 @@ The `BeeAIPlatformServer` class exposes agents built with the BeeAI Framework as
 	    )
 	
 	    # Runs HTTP server that registers to BeeAI platform
-	    server = BeeAIPlatformServer(config={"configure_telemetry": False})
+	    server = BeeAIPlatformServer(config={"configure_telemetry": False}, memory_manager=BeeAIPlatformMemoryManager())
 	    server.register(
 	        agent,
 	        name="Granite chat agent",
